# sy2ools

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: sy2Policies.cmake  sy2ProjectFuncs.cmake
doc/imhex/: brx.hexpat
include/libsly/core/: buffer_streams.hpp  sha256.hpp  sly_lz.hpp  sly_lz_stream.hpp
include/libsly/sly2/: archive_filesystem.hpp  file_location.hpp  iso_filemapping.hpp  iso_filesystem.hpp  iso_filesystem_types.hpp  option.hpp  option_list.hpp  release.hpp  types.hpp  vector.hpp
include/libsly/sly2/brx/: data.hpp  object.hpp  option.hpp  parser.hpp  proxy_table.hpp  save_table.hpp  sound.hpp  text.hpp  types.hpp  unk_bsp.hpp  world_table.hpp
include/libsly/sly2/brx/data/: data.hpp  proxy_table.hpp  unk_bsp.hpp
include/libsly/sly2/brx/objects/: object.hpp
src/lib/core/: CMakeLists.txt  buffered_read_stream.cpp  buffered_write_stream.cpp  hexbuffer.hpp  sha256_openssl.cpp  sly_lz.cpp  sly_lz_stream.cpp
src/lib/sly2/: CMakeLists.txt  archive_filesystem.cpp  file_location.cpp  fk_utils.cpp  fk_utils.hpp  iso_filemapping.cpp  iso_filemapping.hpp  iso_filesystem.cpp  option.cpp  option_list.cpp  options.cpp  options.hpp  release.cpp
src/lib/sly2/brx/: io_utils.cpp  io_utils.hpp  option.cpp  options.cpp  options.hpp  parser.cpp
src/lib/sly2/brx/objects/: object.cpp
src/lib/sly2/isomappings/: ntscu_retail.hpp
src/tools/cli/: CMakeLists.txt  brxdecompress.cpp  brxtest.cpp  sly2_iso_pull_files.cpp
src/tools/cli/slyarc/: CMakeLists.txt  cmd.cpp  cmd.hpp  cmd_extract_all.cpp  cmd_list.cpp  main.cpp  utils.cpp  utils.hpp
tools/: cfall
